# MSLearn

./: LISCENSE.md  README.md  pyproject.toml
src/MSLearn/: __init__.py  atomic_data.py  dataset.py  main.py  models.py  train.py  utilities.py
test/: run.sh
test/sample/input/: config_test.yaml
test/sample/output/: checkpoint_test.pth  config_test.yaml  log
test/sample/output/output/: model_config.json  model_config.yaml  model_summary.txt  trained_model.pth  training_history.csv  true_training_history.csv  ws_and_bs.txt
test/sample1_pip_nn/input/: config_test.yaml  sample.xyz
test/sample1_pip_nn/output/: checkpoint_test.pth  log
test/sample1_pip_nn/output/output/: model_config.json  model_config.yaml  trained_model.pth  training_history.csv  true_training_history.csv  ws_and_bs.txt
test/sample2_pip_nn_pm/input/: config_test.yaml  sample.xyz
test/sample2_pip_nn_pm/output/: checkpoint_test.pth  log
test/sample3_pr_nn/output/: checkpoint_test.pth  config_test.yaml  log
test/sample4_graph_mpnn/input/: config_test.yaml
test/sample4_graph_mpnn/output/: checkpoint_test.pth  log
test/sample5_graph_mpnn/output/: checkpoint_test.pth  config_test.yaml  log
test/sample6_graph_mpnn_pm/input/: config_test.yaml
test/sample6_graph_mpnn_pm/output/: checkpoint_test.pth  log
test/sample7_general_nn/input/: config_test.yaml
test/sample7_general_nn/output/: checkpoint_test.pth  log
test/sample8_graph_mpnn_pm/output/: checkpoint_test.pth  config_test.yaml  log
test/sample_pm/input/: config_test.yaml
test/sample_pm/output/: checkpoint_test.pth  log
(+51 files in other folders)
